<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="342dp"
        android:layout_height="577dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/landingbg"
        android:backgroundTint="@color/white_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="37dp"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@drawable/pickuplogo" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="272dp"
        android:layout_height="42dp"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:hint="@string/first_name"
        android:textAlignment="viewStart"
        android:textColor="@color/warmGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="272dp"
        android:layout_height="42dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_text"
        android:inputType="textPersonName"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:hint="@string/last_name"
        android:textAlignment="viewStart"
        android:textColor="@color/warmGrey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0"
        />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="272dp"
        android:layout_height="42dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_text"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textAlignment="viewStart"
        android:textColor="@color/warmGrey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0" />
    <EditText
        android:id="@+id/email"
        android:layout_width="272dp"
        android:layout_height="42dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textAlignment="viewStart"
        android:textColor="@color/warmGrey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintVertical_bias="0.0" />
    <EditText
        android:id="@+id/password"
        android:layout_width="272dp"
        android:layout_height="42dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textAlignment="viewStart"
        android:textColor="@color/warmGrey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/confirm"
        android:layout_width="272dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@drawable/edit_text"
        android:backgroundTint="@color/sea_foam_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:text="@string/have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:indeterminateTint="@color/sea_foam_blue"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>